--- a/.github/workflows/vc.yml
+++ b/.github/workflows/vc.yml
@@ -9,14 +9,15 @@ jobs:
     runs-on: windows-2019
     steps:
       - name: Check if VCToolsRedistDir exists
-        shell: cmd
+        shell: pwsh
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
-          :: Print all environment variables for debugging
-          set
-          :: Check if VCToolsRedistDir is set
-          if not defined VCToolsRedistDir (
-            echo Error: Environment variable VCToolsRedistDir is not set.
-            exit /b 1
-          )
-          echo VCToolsRedistDir is set to %VCToolsRedistDir%
+          # Call the vcvarsall.bat to set up the environment
+          & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          
+          # Check if the VCToolsRedistDir variable is set
+          if (-not $env:VCToolsRedistDir) {
+            Write-Host "Error: Environment variable VCToolsRedistDir is not set."
+            exit 1
+          } else {
+            Write-Host "VCToolsRedistDir is set to: $env:VCToolsRedistDir"
+          }
