--- a/.github/workflows/vc.yml
+++ b/.github/workflows/vc.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   test:
     runs-on: windows-2019
+    env:
+      VCToolsRedistDir: "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Redist\MSVC\14.29.30037\x64\"
+
     steps:
       - name: Check if VCToolsRedistDir exists
         shell: cmd
@@ -16,12 +19,6 @@ jobs:
           :: Output all environment variables for debugging
           set
 
-          :: Check related environment variables
-          echo Checking related environment variables...
-          echo INCLUDE: %INCLUDE%
-          echo LIB: %LIB%
-          echo PATH: %PATH%
-          
           :: Check if the VCToolsRedistDir variable is set
           if not defined VCToolsRedistDir (
             echo Error: Environment variable VCToolsRedistDir is not set.
